packagelon com.twittelonr.homelon_mixelonr.marshallelonr.relonquelonst

import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.HomelonMixelonrRelonquelonst
import com.twittelonr.homelon_mixelonr.{thriftscala => t}
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.marshallelonr.relonquelonst.ClielonntContelonxtUnmarshallelonr
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class HomelonMixelonrRelonquelonstUnmarshallelonr @Injelonct() (
  clielonntContelonxtUnmarshallelonr: ClielonntContelonxtUnmarshallelonr,
  homelonProductUnmarshallelonr: HomelonMixelonrProductUnmarshallelonr,
  homelonProductContelonxtUnmarshallelonr: HomelonMixelonrProductContelonxtUnmarshallelonr,
  homelonDelonbugParamsUnmarshallelonr: HomelonMixelonrDelonbugParamsUnmarshallelonr) {

  delonf apply(homelonRelonquelonst: t.HomelonMixelonrRelonquelonst): HomelonMixelonrRelonquelonst = {
    HomelonMixelonrRelonquelonst(
      clielonntContelonxt = clielonntContelonxtUnmarshallelonr(homelonRelonquelonst.clielonntContelonxt),
      product = homelonProductUnmarshallelonr(homelonRelonquelonst.product),
      productContelonxt = homelonRelonquelonst.productContelonxt.map(homelonProductContelonxtUnmarshallelonr(_)),
      // Avoid delon-selonrializing cursors in thelon relonquelonst unmarshallelonr. Thelon unmarshallelonr should nelonvelonr
      // fail, which is oftelonn a possibility whelonn trying to delon-selonrializelon a cursor. Cursors can also
      // belon product-speloncific and morelon appropriatelonly handlelond in individual product pipelonlinelons.
      selonrializelondRelonquelonstCursor = homelonRelonquelonst.cursor,
      maxRelonsults = homelonRelonquelonst.maxRelonsults,
      delonbugParams = homelonRelonquelonst.delonbugParams.map(homelonDelonbugParamsUnmarshallelonr(_)),
      homelonRelonquelonstParam = falselon
    )
  }
}
