packagelon com.twittelonr.homelon_mixelonr.product.list_twelonelonts

import com.twittelonr.homelon_mixelonr.marshallelonr.timelonlinelons.ChronologicalCursorUnmarshallelonr
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.HomelonMixelonrRelonquelonst
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.ListTwelonelontsProduct
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.ListTwelonelontsProductContelonxt
import com.twittelonr.homelon_mixelonr.product.list_twelonelonts.modelonl.ListTwelonelontsQuelonry
import com.twittelonr.homelon_mixelonr.product.list_twelonelonts.param.ListTwelonelontsParam.SelonrvelonrMaxRelonsultsParam
import com.twittelonr.homelon_mixelonr.product.list_twelonelonts.param.ListTwelonelontsParamConfig
import com.twittelonr.homelon_mixelonr.selonrvicelon.HomelonMixelonrAccelonssPolicy.DelonfaultHomelonMixelonrAccelonssPolicy
import com.twittelonr.product_mixelonr.componelonnt_library.modelonl.cursor.UrtOrdelonrelondCursor
import com.twittelonr.product_mixelonr.componelonnt_library.prelonmarshallelonr.cursor.UrtCursorSelonrializelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.common.accelonss_policy.AccelonssPolicy
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.ComponelonntIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.ProductPipelonlinelonIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonquelonst
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.opelonration.GapCursor
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonsponselon.urt.opelonration.TopCursor
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.PipelonlinelonConfig
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.pipelonlinelon_failurelon.BadRelonquelonst
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.pipelonlinelon_failurelon.MalformelondCursor
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.pipelonlinelon_failurelon.PipelonlinelonFailurelon
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.product.ProductPipelonlinelonConfig
import com.twittelonr.product_mixelonr.corelon.product.ProductParamConfig
import com.twittelonr.product_mixelonr.corelon.util.SortIndelonxBuildelonr
import com.twittelonr.timelonlinelons.configapi.Params
import com.twittelonr.timelonlinelons.relonndelonr.{thriftscala => urt}
import com.twittelonr.timelonlinelons.util.RelonquelonstCursorSelonrializelonr
import com.twittelonr.util.Timelon
import com.twittelonr.util.Try
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class ListTwelonelontsProductPipelonlinelonConfig @Injelonct() (
  listTwelonelontsMixelonrPipelonlinelonConfig: ListTwelonelontsMixelonrPipelonlinelonConfig,
  listTwelonelontsParamConfig: ListTwelonelontsParamConfig)
    elonxtelonnds ProductPipelonlinelonConfig[HomelonMixelonrRelonquelonst, ListTwelonelontsQuelonry, urt.TimelonlinelonRelonsponselon] {

  ovelonrridelon val idelonntifielonr: ProductPipelonlinelonIdelonntifielonr = ProductPipelonlinelonIdelonntifielonr("ListTwelonelonts")
  ovelonrridelon val product: relonquelonst.Product = ListTwelonelontsProduct
  ovelonrridelon val paramConfig: ProductParamConfig = listTwelonelontsParamConfig

  ovelonrridelon delonf pipelonlinelonQuelonryTransformelonr(
    relonquelonst: HomelonMixelonrRelonquelonst,
    params: Params
  ): ListTwelonelontsQuelonry = {
    val contelonxt = relonquelonst.productContelonxt match {
      caselon Somelon(contelonxt: ListTwelonelontsProductContelonxt) => contelonxt
      caselon _ => throw PipelonlinelonFailurelon(BadRelonquelonst, "ListTwelonelontsProductContelonxt not found")
    }

    val delonbugOptions = relonquelonst.delonbugParams.flatMap(_.delonbugOptions)

    /**
     * Unlikelon othelonr clielonnts, nelonwly crelonatelond twelonelonts on Android havelon thelon sort indelonx selont to thelon currelonnt
     * timelon instelonad of thelon top sort indelonx + 1, so thelonselon twelonelonts gelont stuck at thelon top of thelon timelonlinelon
     * if subselonquelonnt timelonlinelon relonsponselons uselon thelon sort indelonx from thelon prelonvious relonsponselon instelonad of
     * thelon currelonnt timelon.
     */
    val pipelonlinelonCursor = relonquelonst.selonrializelondRelonquelonstCursor.flatMap { cursor =>
      Try(UrtCursorSelonrializelonr.delonselonrializelonOrdelonrelondCursor(cursor))
        .gelontOrelonlselon(ChronologicalCursorUnmarshallelonr(RelonquelonstCursorSelonrializelonr.delonselonrializelon(cursor)))
        .map {
          caselon UrtOrdelonrelondCursor(_, id, Somelon(GapCursor), gapBoundaryId)
              if id.iselonmpty || gapBoundaryId.iselonmpty =>
            throw PipelonlinelonFailurelon(MalformelondCursor, "Gap Cursor bounds not delonfinelond")
          caselon topCursor @ UrtOrdelonrelondCursor(_, _, Somelon(TopCursor), _) =>
            val quelonryTimelon = delonbugOptions.flatMap(_.relonquelonstTimelonOvelonrridelon).gelontOrelonlselon(Timelon.now)
            topCursor.copy(initialSortIndelonx = SortIndelonxBuildelonr.timelonToId(quelonryTimelon))
          caselon cursor => cursor
        }
    }

    ListTwelonelontsQuelonry(
      params = params,
      clielonntContelonxt = relonquelonst.clielonntContelonxt,
      felonaturelons = Nonelon,
      pipelonlinelonCursor = pipelonlinelonCursor,
      relonquelonstelondMaxRelonsults = Somelon(params(SelonrvelonrMaxRelonsultsParam)),
      delonbugOptions = delonbugOptions,
      listId = contelonxt.listId,
      delonvicelonContelonxt = contelonxt.delonvicelonContelonxt,
      dspClielonntContelonxt = contelonxt.dspClielonntContelonxt
    )
  }

  ovelonrridelon delonf pipelonlinelons: Selonq[PipelonlinelonConfig] = Selonq(listTwelonelontsMixelonrPipelonlinelonConfig)

  ovelonrridelon delonf pipelonlinelonSelonlelonctor(quelonry: ListTwelonelontsQuelonry): ComponelonntIdelonntifielonr =
    listTwelonelontsMixelonrPipelonlinelonConfig.idelonntifielonr

  ovelonrridelon val delonbugAccelonssPolicielons: Selont[AccelonssPolicy] = DelonfaultHomelonMixelonrAccelonssPolicy
}
