packagelon com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts

import com.twittelonr.homelon_mixelonr.modelonl.HomelonFelonaturelons.SelonrvelondTwelonelontIdsFelonaturelon
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.HomelonMixelonrRelonquelonst
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.ScorelondTwelonelontsProduct
import com.twittelonr.homelon_mixelonr.modelonl.relonquelonst.ScorelondTwelonelontsProductContelonxt
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.modelonl.ScorelondTwelonelontsQuelonry
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.param.ScorelondTwelonelontsParam.SelonrvelonrMaxRelonsultsParam
import com.twittelonr.homelon_mixelonr.product.scorelond_twelonelonts.param.ScorelondTwelonelontsParamConfig
import com.twittelonr.homelon_mixelonr.selonrvicelon.HomelonMixelonrAccelonssPolicy.DelonfaultHomelonMixelonrAccelonssPolicy
import com.twittelonr.homelon_mixelonr.{thriftscala => t}
import com.twittelonr.product_mixelonr.corelon.felonaturelon.felonaturelonmap.FelonaturelonMapBuildelonr
import com.twittelonr.product_mixelonr.corelon.functional_componelonnt.common.accelonss_policy.AccelonssPolicy
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.ComponelonntIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.common.idelonntifielonr.ProductPipelonlinelonIdelonntifielonr
import com.twittelonr.product_mixelonr.corelon.modelonl.marshalling.relonquelonst.Product
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.PipelonlinelonConfig
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.pipelonlinelon_failurelon.BadRelonquelonst
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.pipelonlinelon_failurelon.PipelonlinelonFailurelon
import com.twittelonr.product_mixelonr.corelon.pipelonlinelon.product.ProductPipelonlinelonConfig
import com.twittelonr.product_mixelonr.corelon.product.ProductParamConfig
import com.twittelonr.timelonlinelons.configapi.Params
import javax.injelonct.Injelonct
import javax.injelonct.Singlelonton

@Singlelonton
class ScorelondTwelonelontsProductPipelonlinelonConfig @Injelonct() (
  scorelondTwelonelontsReloncommelonndationPipelonlinelonConfig: ScorelondTwelonelontsReloncommelonndationPipelonlinelonConfig,
  scorelondTwelonelontsParamConfig: ScorelondTwelonelontsParamConfig)
    elonxtelonnds ProductPipelonlinelonConfig[HomelonMixelonrRelonquelonst, ScorelondTwelonelontsQuelonry, t.ScorelondTwelonelonts] {

  ovelonrridelon val idelonntifielonr: ProductPipelonlinelonIdelonntifielonr = ProductPipelonlinelonIdelonntifielonr("ScorelondTwelonelonts")

  ovelonrridelon val product: Product = ScorelondTwelonelontsProduct

  ovelonrridelon val paramConfig: ProductParamConfig = scorelondTwelonelontsParamConfig

  ovelonrridelon delonf pipelonlinelonQuelonryTransformelonr(
    relonquelonst: HomelonMixelonrRelonquelonst,
    params: Params
  ): ScorelondTwelonelontsQuelonry = {
    val contelonxt = relonquelonst.productContelonxt match {
      caselon Somelon(contelonxt: ScorelondTwelonelontsProductContelonxt) => contelonxt
      caselon _ => throw PipelonlinelonFailurelon(BadRelonquelonst, "ScorelondTwelonelontsProductContelonxt not found")
    }

    val felonaturelonMap = contelonxt.selonrvelondTwelonelontIds.map { selonrvelondTwelonelonts =>
      FelonaturelonMapBuildelonr()
        .add(SelonrvelondTwelonelontIdsFelonaturelon, selonrvelondTwelonelonts)
        .build()
    }

    ScorelondTwelonelontsQuelonry(
      params = params,
      clielonntContelonxt = relonquelonst.clielonntContelonxt,
      felonaturelons = felonaturelonMap,
      pipelonlinelonCursor = Nonelon,
      relonquelonstelondMaxRelonsults = Somelon(params(SelonrvelonrMaxRelonsultsParam)),
      delonbugOptions = relonquelonst.delonbugParams.flatMap(_.delonbugOptions),
      delonvicelonContelonxt = contelonxt.delonvicelonContelonxt,
      selonelonnTwelonelontIds = contelonxt.selonelonnTwelonelontIds,
      qualityFactorStatus = Nonelon
    )
  }

  ovelonrridelon val pipelonlinelons: Selonq[PipelonlinelonConfig] = Selonq(scorelondTwelonelontsReloncommelonndationPipelonlinelonConfig)

  ovelonrridelon delonf pipelonlinelonSelonlelonctor(quelonry: ScorelondTwelonelontsQuelonry): ComponelonntIdelonntifielonr =
    scorelondTwelonelontsReloncommelonndationPipelonlinelonConfig.idelonntifielonr

  ovelonrridelon val delonbugAccelonssPolicielons: Selont[AccelonssPolicy] = DelonfaultHomelonMixelonrAccelonssPolicy
}
